tests/errors/undecl-at-id.au
class A{}

def (self: A) a() {
    @a;
}